[gd_scene load_steps=2 format=3 uid="uid://d1a60qqk4f01k"]

[ext_resource type="Script" uid="uid://c3db8uujxcl0n" path="res://ui/pause_menu.gd" id="1_c7v6e"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_c7v6e")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1732.0
offset_top = -917.0
offset_right = 2012.0
offset_bottom = 1010.0
color = Color(0, 0, 0, 0.47451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -80.0
offset_right = 62.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "PAUSE"

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
